--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -4,6 +4,9 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 datarootdir=@datarootdir@
 
+# write SPA on vfd display
+echo "SPA" > /dev/vfd
+
 #wetek kodi start
 if [ -e /usr/bin/kodi ]; then
 	if [ -e /etc/.kodistart ]; then
